# ndie

./: .gitignore  readme.md
.github/workflows/: deploy.yml
libf/: CMakeLists.txt
libf/src/: libf.cc  libf.hh  libfsimd.cc  types.hh  util.cc  util.hh
ndie/: README.md  bun.lockb  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.worker.json  vite.config.ts
ndie/src/: App.vue  types.ts
ndie/src/assets/: main.less
ndie/src/components/: ImageCanvas.vue  ImageInfo.vue
ndie/src/components/FilterComponents/: BitcrushParams.vue  ContrastParams.vue  CustomKernelParams.vue  GammaParams.vue  HSVParams.vue  NoiseParams.vue  PixelateParams.vue  PredefKernelParams.vue  SharpenParams.vue  SobelParams.vue  ThresholdParams.vue  filters.ts
ndie/src/components/icons/: ic-delete.vue  ic-drag.vue
ndie/src/worker/: index.ts  libf.d.ts  libfilter.ts
